--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.5",
+    "pubsub-js": "^1.9.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
